// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBar /> General rendering should be empty if no messages have been set 1`] = `
<Component
  classNames={
    {
      "container": null,
      "message": null,
    }
  }
  messages={[]}
>
  <div
    className="css-1gmese ui-shared__message-bar"
    role={null}
  />
</Component>
`;

exports[`<MessageBar /> General rendering should render a message as info if type is missing 1`] = `
<Component
  classNames={
    {
      "container": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "something",
      },
    ]
  }
>
  <div
    className="css-1gmese ui-shared__message-bar"
    role="alert"
  >
    <div
      className="css-1eb86rn"
      key="info-something"
    >
      <span
        aria-hidden={true}
      >
        something
      </span>
    </div>
  </div>
</Component>
`;

exports[`<MessageBar /> Multiple messages rendering should render messages without frontend translation 1`] = `
<Component
  classNames={
    {
      "container": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "This is some information",
        "type": "info",
      },
      {
        "message": "This is an error that happened here.",
        "type": "error",
      },
      {
        "message": "This is just a warning. Nothing to freak out about.",
        "type": "warning",
      },
      {
        "message": "Normal pre-translated message.",
        "translated": null,
      },
      {
        "message": "Normal pre-translated message two.",
        "translated": true,
      },
    ]
  }
>
  <div
    className="css-1gmese ui-shared__message-bar"
    role="alert"
  >
    <div
      className="css-1eb86rn"
      key="info-This is some information"
    >
      <span
        aria-hidden={true}
      >
        This is some information
      </span>
    </div>
    <div
      className="css-1t4ceri"
      key="error-This is an error that happened here."
    >
      <span
        aria-hidden={true}
      >
        This is an error that happened here.
      </span>
    </div>
    <div
      className="css-y06bhm"
      key="warning-This is just a warning. Nothing to freak out about."
    >
      <span
        aria-hidden={true}
      >
        This is just a warning. Nothing to freak out about.
      </span>
    </div>
    <div
      className="css-1eb86rn"
      key="info-Normal pre-translated message."
    >
      <span
        aria-hidden={true}
      >
        Normal pre-translated message.
      </span>
    </div>
    <div
      className="css-1eb86rn"
      key="info-Normal pre-translated message two."
    >
      <span
        aria-hidden={true}
      >
        Normal pre-translated message two.
      </span>
    </div>
  </div>
</Component>
`;

exports[`<MessageBar /> Multiple messages rendering should render with custom classNames 1`] = `
<Component
  classNames={
    {
      "container": "cls-container",
      "message": "cls-message",
    }
  }
  messages={
    [
      {
        "message": "This is some information",
      },
    ]
  }
>
  <div
    className="css-1gmese cls-container ui-shared__message-bar"
    role="alert"
  >
    <div
      className="cls-message css-1eb86rn"
      key="info-This is some information"
    >
      <span
        aria-hidden={true}
      >
        This is some information
      </span>
    </div>
  </div>
</Component>
`;

exports[`<MessageBar /> Multiple messages rendering should translate and render all given messages 1`] = `
<Component
  classNames={
    {
      "container": null,
      "message": null,
    }
  }
  messages={
    [
      {
        "message": "some.translation.string",
        "translated": false,
      },
      {
        "message": "Message with messageParams",
        "messageParams": {
          "myCustomParam1": "-> TEST-VALUE #1 <-",
          "myCustomParam2": "-> TEST-VALUE #2 <-",
        },
        "translated": false,
      },
    ]
  }
>
  <div
    className="css-1gmese ui-shared__message-bar"
    role="alert"
  >
    <div
      className="css-1eb86rn"
      key="info-some.translation.string"
    >
      <span
        aria-hidden={true}
      >
        some.translation.string
      </span>
    </div>
    <div
      className="css-1eb86rn"
      key="info-Message with messageParams"
    >
      <span
        aria-hidden={true}
      >
        Message with messageParams
      </span>
    </div>
  </div>
</Component>
`;
